tests/test_data/CodeStructureSnippets/bad/sem_err_3.3.ifj21
require "ifj21"

function main()
    local vysl : integer = 0
    robert = 1
end
main()